// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertsStat /> spec Alert Stat renders component with monitor and loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        Alert
         
        <button
          class="euiLink euiLink--primary"
          style="font-size: 12px;"
          type="button"
        >
          Info
        </button>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      <p
        class="euiTitle euiTitle--small euiStat__title"
        style="display: inline;"
      >
        -
         
      </p>
      <a
        class="euiLink euiLink--primary"
        href="/1d42b75b-3f59-550a-a"
        rel="noopener noreferrer"
        style="font-size: 14px;"
        target="_blank"
      >
        View monitor
        <svg
          aria-label="External link"
          class="euiIcon euiIcon--small euiLink__externalIcon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
          />
        </svg>
        <span
          class="euiScreenReaderOnly"
        >
          (opens in a new tab or window)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`<AlertsStat /> spec Alert Stat renders component with monitor and not loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        Alert
         
        <button
          class="euiLink euiLink--primary"
          style="font-size: 12px;"
          type="button"
        >
          Info
        </button>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      <p
        class="euiTitle euiTitle--small euiStat__title"
        style="display: inline;"
      >
        9
         
      </p>
      <a
        class="euiLink euiLink--primary"
        href="/899c56c6-99d0-539b-8"
        rel="noopener noreferrer"
        style="font-size: 14px;"
        target="_blank"
      >
        View monitor
        <svg
          aria-hidden="true"
          aria-label="External link"
          class="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
          />
        </svg>
        <span
          class="euiScreenReaderOnly"
        >
          (opens in a new tab or window)
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`<AlertsStat /> spec Alert Stat renders component with undefined monitor and loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        Alert
         
        <button
          class="euiLink euiLink--primary"
          style="font-size: 12px;"
          type="button"
        >
          Info
        </button>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      <p
        class="euiTitle euiTitle--small euiStat__title"
        style="display: inline;"
      >
        -
         
      </p>
    </div>
  </div>
</div>
`;

exports[`<AlertsStat /> spec Alert Stat renders component with undefined monitor and not loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        Alert
         
        <button
          class="euiLink euiLink--primary"
          style="font-size: 12px;"
          type="button"
        >
          Info
        </button>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      <p
        class="euiTitle euiTitle--small euiStat__title"
        style="display: inline;"
      >
        9
         
      </p>
    </div>
  </div>
</div>
`;

exports[`<AnomalyStat /> spec Anomaly Stat renders component without tooltip 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      test description
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      test title
    </div>
  </div>
</div>
`;

exports[`<AnomalyStatWithTooltip /> spec Anomaly Stat with tooltip renders component with tooltip and loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        test description
         
        <span
          class="euiToolTipAnchor"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 11.508 7.468 8H6.25V7h2.401l.03 3.508H9.8v1H7.5Zm-.25-6.202a.83.83 0 0 1 .207-.577c.137-.153.334-.229.59-.229.256 0 .454.076.594.23.14.152.209.345.209.576 0 .228-.07.417-.21.568-.14.15-.337.226-.593.226-.256 0-.453-.075-.59-.226a.81.81 0 0 1-.207-.568ZM8 13A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm0 1A6 6 0 1 1 8 2a6 6 0 0 1 0 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      -
    </div>
  </div>
</div>
`;

exports[`<AnomalyStatWithTooltip /> spec Anomaly Stat with tooltip renders component with tooltip and not loading 1`] = `
<div>
  <div
    class="euiStat euiStat--leftAligned"
  >
    <div
      class="euiText euiText--small euiStat__description"
    >
      <p>
        test description
         
        <span
          class="euiToolTipAnchor"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon-isLoading"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
            />
          </svg>
        </span>
      </p>
    </div>
    <div
      class="euiTitle euiTitle--small euiStat__title"
      style="display: inline;"
    >
      0.50-0.90
    </div>
  </div>
</div>
`;
